# Ruchardet

./: .Rbuildignore  .Rhistory  DESCRIPTION  NAMESPACE  README.Rmd  README.md  cleanup  config.status  configure  configure.ac  configure.in
.Rproj.user/9E8372A5/: persistent-state
.Rproj.user/9E8372A5/pcs/: files-pane.pper  windowlayoutstate.pper
.Rproj.user/9E8372A5/sdb/prop/: INDEX
.Rproj.user/9E8372A5/sdb/s-F6FE1C69/: 573F57F0  8AEBBA1B  ED1B2883  F4D0ACB1
R/: RcppExports.R  getCharEncoding.R  utils.R
autom4te.cache/: output.0  requests  traces.0
inst/: NEWS
inst/tests/: euc_kr.txt  test-Ruchardet.R
man/: detectEncoding.Rd  detectFileEncoding.Rd  getCharEncoding.Rd
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  detectEncoding.cpp  getCharEncoding.cpp
src/uchardet-0.0.1/: CMakeLists.txt
src/uchardet-0.0.1/src/: Makefile
tests/: test-all.R
