
## Process this file with autoconf to produce a configure script.
##
## Configure.in for RcppGSL
##
## Copyright (C) 2010 Romain Francois and Dirk Eddelbuettel
## Licensed under GNU GPL 2 or later

# The version set here will propagate to other files from here
AC_INIT([Ruchardet], 0.1.0)

# Checks for common programs using default macros
AC_PROG_CC


AC_CHECK_LIB([uchardet], [encoding_detector])
AC_CHECK_HEADER([uchardet/uchardet.h])

#CFLAGS="$CFLAGS -I/usr/local/include"
LIBS="$LIBS -luchardet"


## Use Rscript to query Rcpp for compiler and linker flags
##
## look for Rscript, but use the one found via R_HOME to allow for multiple installations
AC_DEFUN(AC_PROG_RSCRIPT, [AC_CHECK_PROG(RSCRIPT,Rscript,yes)])
AC_PROG_RSCRIPT
if test x"${RSCRIPT}" == x"yes" ; then
     : ${R_HOME=`R RHOME`}
     if test -z "${R_HOME}"; then
         AC_MSG_ERROR([Could not determine R_HOME.])
     fi
     ## Rcpp compile flag providing header directory containing Rcpp.h
     RCPP_CXXFLAGS=`${R_HOME}/bin/Rscript -e 'Rcpp:::CxxFlags()'`
     ## link flag providing libary as well as path to library, and optionally rpath
     RCPP_LDFLAGS=`${R_HOME}/bin/Rscript -e 'Rcpp:::LdFlags()'` 
else
    AC_MSG_ERROR([Rscript not found, is R installed?])
fi

# Now substitute these variables in src/Makevars.in to create src/Makevars
#AC_SUBST(CFLAGS)
AC_SUBST(LIBS)
AC_SUBST(RCPP_CXXFLAGS)
AC_SUBST(RCPP_LDFLAGS)

AC_OUTPUT(src/Makevars)

